--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://gadgetswoocommerce.local/wp-json/wc/v3
+VITE_WC_API_URL=http://gadgetswoocommerce.local/wp-json/wc/v3/products
 VITE_WC_CONSUMER_KEY=ck_d7a4dbe881abcda743b2b0d508065e98a127fcca
 VITE_WC_CONSUMER_SECRET=cs_6caf9109df1ef6d7f65e7d3ec3a8ae48d82efa3b
